# replacement-policies

./: CMakeLists.txt  README  clk.h  fifo.c  fifo_test.c  gclk.h  lru.c  lru_test.c  rnd.h  rnd_test.c  slru.h  slru_test.c
src/: CMakeLists.txt  bench.c  clk.c  fifo.h  gclk.c  htable.c  htable.h  lhtable.c  lhtable.h  linkmap.c  linkmap.h  lru.c  lru.h  lrutable.c  lrutable.h  rnd.c  slru.c
test/: CMakeLists.txt  clk_test.c  htable_test.c  lhtable_test.c  linkmap_test.c  lrutable_test.c  slru_test.c
